# veriflow

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yml  docs.yml  publish.yml  test-report.yml
docs/source/: api.rst  conf.py  gallery.rst  index.rst  user_guide.rst
docs/source/_static/: versions.json
docs/source/api/: configuration.datasinks.rst  configuration.datasources.rst  configuration.general.rst  configuration.rst  configuration.scores.rst  constants.rst  datamodel.inputschemas.rst  datamodel.main.rst  datamodel.rst  datasinks.rst  datasources.rst  pipeline.rst  scores.rst
docs/source/api/_generated/: dpyverification.constants.rst  dpyverification.datamodel.main.rst  dpyverification.datamodel.rst  dpyverification.datasinks.base.rst  dpyverification.datasinks.cf_compliant_netcdf.rst  dpyverification.datasinks.rst  dpyverification.datasources.base.rst  dpyverification.datasources.fewsnetcdf.rst  dpyverification.datasources.fewswebservice.rst  dpyverification.datasources.inputschemas.rst  dpyverification.datasources.rst  dpyverification.datasources.thresholds.rst  dpyverification.pipeline.rst  dpyverification.scores.base.rst  dpyverification.scores.categorical.rst  dpyverification.scores.continuous.rst  dpyverification.scores.probabilistic.rst  dpyverification.scores.rst
docs/source/notebooks/: tutorial1.ipynb
docs/source/user_guide/: configuration.rst  installation.rst  running.rst  visualization.rst
examples/: app.py  hydrological_ensemble_verification.ipynb
schemas/0.0.1/: config.schema.json
schemas/0.1.0/: config.schema.json
scripts/: __init__.py  export_versioned_schemas.py
src/dpyverification/: __init__.py  base.py  cli.py  constants.py  pipeline.py
src/dpyverification/api/: __init__.py  fewswebservice.py
src/dpyverification/configuration/: __init__.py  base.py  config.py  file.py  main.py  schema.py  utils.py
src/dpyverification/configuration/default/: datasinks.py  datasources.py  scores.py
src/dpyverification/datamodel/: __init__.py  main.py
src/dpyverification/datasinks/: __init__.py  base.py  cf_compliant_netcdf.py  cf_compliant_netdf.py  genericdatasink.py
src/dpyverification/datasinks/fewsnetcdf/: __init__.py  main.py  schema.py
src/dpyverification/datasources/: __init__.py  base.py  csv.py  fewsnetcdf.py  fewswebservice.py  genericdatasource.py  inputschemas.py  internal_dataset.py  netcdf.py  pixml.py  thresholds.py
src/dpyverification/datasources/fewsnetcdf/: __init__.py  inputschema.py  main.py  outputschema.py  schema.py
src/dpyverification/scores/: __init__.py  base.py  categorical.py  continuous.py  crps_for_ensemble.py  probabilistic.py  rank_histogram.py  rankhistogram.py  utils.py
src/dpyverification/verifications/: __init__.py  crps_for_ensemble.py  rankhistogram.py  simobspairs.py
src/veriflow/: __init__.py  base.py  cli.py  constants.py  pipeline.py
src/veriflow/configuration/: __init__.py  base.py  config.py  file.py  utils.py
src/veriflow/configuration/default/: __init__.py  datasinks.py  datasources.py  scores.py
src/veriflow/datamodel/: main.py
src/veriflow/datasinks/: __init__.py  base.py  cf_compliant_netcdf.py
src/veriflow/datasinks/fewsnetcdf/: __init__.py  main.py
src/veriflow/datasources/: __init__.py  base.py  csv.py  fewsnetcdf.py  fewswebservice.py  inputschemas.py  netcdf.py
src/veriflow/scores/: __init__.py  base.py  categorical.py  continuous.py  probabilistic.py  utils.py
tests/: __init__.py  conftest.py  test_api_fewswebservice.py  test_cli.py  test_configuration.py  test_configuration_main.py  test_configuration_secret_settings.py  test_datamodel.py  test_datasinks.py  test_datasource_csv.py  test_datasource_fewsnetcdf.py  test_datasource_fewswebservice.py  test_datasource_thresholds.py  test_datasources_datasinks_fewsnetcdf.py  test_datasources_fewsnetcdf.py  test_datasources_fewswebservice.py  test_datasources_pixml.py  test_input_data.py  test_input_data_schemas.py  test_input_dataset.py  test_input_dataset_initialization.py  test_pipeline.py  test_scores.py  test_simobsdataset.py  test_toolcompliance.py  test_validate_xarray.py  test_verifications_simobspairs.py
tests/data/: fews_compliant_test_file.nc  testconfig.yaml
tests/data/webservice_responses_netcdf/: timeseries_headers.json
tests/data/webservice_responses_netcdf/obs/: Q_m_externalhistorical_nonequidistant.nc
tests/data/webservice_responses_netcdf/sim/: 20241110_0800_Q_fs_0_externalforecasting_nonequidistant.nc  20241110_2000_Q_fs_0_externalforecasting_nonequidistant.nc  20241111_0800_Q_fs_0_externalforecasting_nonequidistant.nc  20241111_2000_Q_fs_0_externalforecasting_nonequidistant.nc  20241112_0800_Q_fs_0_externalforecasting_nonequidistant.nc  20241112_2000_Q_fs_0_externalforecasting_nonequidistant.nc  20241113_0800_Q_fs_0_externalforecasting_nonequidistant.nc  20241113_2000_Q_fs_0_externalforecasting_nonequidistant.nc
tests/data/webservice_responses_netcdf/simulations_per_forecast_period/ensemble/: 172800000_Q_fs_0_externalforecasting_nonequidistant.nc  259200000_Q_fs_0_externalforecasting_nonequidistant.nc  345600000_Q_fs_0_externalforecasting_nonequidistant.nc  (+1 more)
tests/data/webservice_responses_pi_xml/: example_forecasts.xml  example_forecasts_2.xml  example_observations.xml
tests/integration/: __init__.py  test_datasource_fewswebservice.py
(+56 files in other folders)
